---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 2023-02-22
  Features:
    - Added a version of the Loader1x1 - same speed/usage as the other loader, but 1x1 in size, enabling smaller builds.
    - Added a recipe for the vanilla infinity chest, as well as requester and provider variants. Setting the infinity filters will cause them to always maintain supplies of at most/at least/exactly the amount set, and a checkbox will void any contents that aren't in the infinity filters. Since they are vanilla entities, they'll be handled in engine rather than via LUA. They serve as excellent replacements to the duplicator chest and duplicator provider chest.
        - Many of the chests were converted to use this prototype internally to drastically reduce UPS costs - details are below.
  Changes:
    - Removed belt immunity equipment. This is a vanilla item now, no need for a recipe. We don't have one for all the other regular items.
    - Removed fluid-unknown from fluid source recipes. It's not a real fluid and there's no need for it.
  Bugfixes:
    - Added script_raised_built and script_raised_destroy event handlers for creative mod items.
    - Updated the English description for Heat Void to clarify it's always 0C, not room temp.
  Optimizations:
    - Removed all scripting for fluid-source, fluid-void, super-radar, super-beacon, super-roboport, energy-void, energy-source, passive-energy-void, passive-energy-source. They no longer require it. See details below.
    - Changed all creative entities requiring power to use a void energy source, rather than a burner source. Scripting is no longer required to keep these entities powered, and they're less apt to break if moved via script.
        - Removed fuel scripting for creative-lab, item-source, item-duplicator, item-void.
    - Changed Heat Source and Heat Void to use the Heat Interface prototype instead. 