@@ -100,6 +100,8 @@ creative_mode_defines.names.entities = {
     void_storage_chest = creative_mode_defines.name_prefix .. "void-storage-chest",
     super_loader = creative_mode_defines.name_prefix .. "super-loader",
     super_loader2 = creative_mode_defines.name_prefix .. "super-loader2",
+    linked_chest = creative_mode_defines.name_prefix .. "linked-chest",
+    linked_belt = creative_mode_defines.name_prefix .. "linked-belt",
     creative_cargo_wagon = creative_mode_defines.name_prefix .. "creative-cargo-wagon",
     duplicating_cargo_wagon = creative_mode_defines.name_prefix .. "duplicating-cargo-wagon",
     void_cargo_wagon = creative_mode_defines.name_prefix .. "void-cargo-wagon",
@@ -164,6 +166,8 @@ creative_mode_defines.names.items = {
     void_storage_chest = creative_mode_defines.name_prefix .. "void-storage-chest",
     super_loader = creative_mode_defines.name_prefix .. "super-loader",
     super_loader2 = creative_mode_defines.name_prefix .. "super-loader2",
+    linked_chest = creative_mode_defines.name_prefix .. "linked-chest",
+    linked_belt = creative_mode_defines.name_prefix .. "linked-belt",
     creative_cargo_wagon = creative_mode_defines.name_prefix .. "creative-cargo-wagon",
     duplicating_cargo_wagon = creative_mode_defines.name_prefix .. "duplicating-cargo-wagon",
     void_cargo_wagon = creative_mode_defines.name_prefix .. "void-cargo-wagon",
@@ -248,6 +252,8 @@ creative_mode_defines.names.recipes = {
     void_storage_chest = creative_mode_defines.name_prefix .. "void-storage-chest",
     super_loader = creative_mode_defines.name_prefix .. "super-loader",
     super_loader2 = creative_mode_defines.name_prefix .. "super-loader2",
+    linked_chest = creative_mode_defines.name_prefix .. "linked-chest",
+    linked_belt = creative_mode_defines.name_prefix .. "linked-belt",
     creative_cargo_wagon = creative_mode_defines.name_prefix .. "creative-cargo-wagon",
     duplicating_cargo_wagon = creative_mode_defines.name_prefix .. "duplicating-cargo-wagon",
     void_cargo_wagon = creative_mode_defines.name_prefix .. "void-cargo-wagon",
