@@ -68,6 +68,8 @@ creative-mod_void-chest=A chest that removes all items inside it.\nClears conten
 creative-mod_void-storage-chest=A storage chest that removes all items inside it.\nClears contents upon removed.
 creative-mod_super-loader=A super fast loader that can easily compress the transport belt in front of it. When used with infinity chests, you have a low-performance-cost solution for testing throughput with transport a belt system.
 creative-mod_super-loader2=A super fast loader1x1 that can easily compress the transport belt in front of it. When used with infinity chests, you have a low-performance-cost solution for testing throughput with transport a belt system.
+creative-mod_linked-chest=Shares an inventory with other linked chests that have the setting. Set the ID by checking the boxes - any chests where the same boxes are checked/unchecked are linked.
+creative-mod_linked-belt=A belt that can connect to another belt of the same type, anywhere on any surface. To setup, copy the settings (__CONTROL__copy-entity-settings__) of the belt you wish to be the input then paste them (__CONTROL__paste-entity-settings__) on the belt you want to be the output.
 creative-mod_creative-cargo-wagon=A cargo wagon that contains all items in the game and can auto refill itself. Its last slot can be used for voiding unwanted items. (May need to place more than one to get more items.)\nClears contents upon removal.
 creative-mod_duplicating-cargo-wagon=A cargo wagon that duplicates the item in its first slot.\nClears contents upon removal.
 creative-mod_void-cargo-wagon=A cargo wagon that removes all items inside it.\nClears contents upon removal.
